--- a/index.html
+++ b/index.html
@@ -112,27 +112,27 @@
             <img
               src="Pictures/FeaturedWork1.jpg"
               class="slide"
-              data-description="Stylized scene - Made this stylized scene with my mentor Greyyscaled."
+              data-description="Stylized scene - Made this stylized scene with my mentor Greyyscaled. (Click to View More)"
             />
             <img
               src="Pictures/FeaturedWork2.jpg"
               class="slide"
-              data-description="Corrupted City - 1000x1000 Full detailed City Map for Roblox."
+              data-description="Corrupted City - 1000x1000 Full detailed City Map for Roblox. (Click to View More)"
             />
             <img
               src="Pictures/FeaturedWork3.jpg"
               class="slide"
-              data-description="Bomb Ball - Epic Minigames."
+              data-description="Bomb Ball - Epic Minigames. (Click to View More)"
             />
             <img
               src="Pictures/FeaturedWork4.jpg"
               class="slide"
-              data-description="Beast Games - Concept map of Beast Games."
+              data-description="Beast Games - Concept map of Beast Games. (Click to View More)"
             />
             <img
               src="Pictures/FeaturedWork5.jpg"
               class="slide"
-              data-description="A Wavy Trip - Remake of the lobby."
+              data-description="A Wavy Trip - Remake of the lobby. (Click to View More)"
             />
           </div>
         </div>
